@startuml

title __FINALPROJECT's Class Diagram__\n

  namespace  {
    namespace om.example.finalproject {
      class com.example.finalproject.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.finalproject {
      class com.example.finalproject.HelloController {
      }
    }
  }
  

  namespace  {
    namespace om.example.finalproject {
      class com.example.finalproject.LinkedListController {
      }
    }
  }
  

  namespace  {
    namespace om.example.finalproject {
      class com.example.finalproject.Main {
      }
    }
  }
  

  namespace  {
    namespace om.example.finalproject {
      class com.example.finalproject.QueueController {
      }
    }
  }
  

  namespace  {
    namespace om.example.finalproject {
      class com.example.finalproject.StackController {
      }
    }
  }
  

  namespace  {
    namespace om.example.finalproject {
      class com.example.finalproject.TreeController {
      }
    }
  }
  

  com.example.finalproject.HelloApplication -up-|> javafx.application.Application
  com.example.finalproject.TreeController o-- com.example.finalproject.TreeController.TreeNode : root


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
